# presiden-simulator

./: .gitignore  TARGET_COUNTRY_VALIDATION_FIX.md  absolute_fix.js  add_card_equals.js  add_category_totals.js  add_comments.js  add_comments_v2.js  add_comments_v3.js  add_ids_test.py  add_totals.js  apply_relations.js  apply_relations_asia.js  apply_relations_dz.js  apply_relations_eropa.js  apply_relations_rest.js  bump_fonts.js  check_exact.js  check_missing.js  check_txt.js  check_txt_out.txt  checklist_negara.md  contributions.txt  debug_aggregated_prep.js  debug_military_costs.js  diff_files.txt  diff_files_utf8.txt  diff_page.txt  expand_military_data.js  expand_military_data_safe.js  extract_names.js  failing_aliases.txt  files_to_update.txt  files_to_update_utf8.txt  fitur yang belum selesai  fix_african_data.py  fix_all_scales_equal.js  fix_braces_mod.js  fix_card_count.js  fix_commas.py  fix_item_names.js  (+39 more)
app/: debug_math.js  refactor_storage.js
app/frontend/src/app/game/components/2_navigasi_menu/2_navigasi_bawah/4_pertahanan/1_komando_pertahanan/modals/1_misi_serangan/halaman_utama_pertempuran/pertempuran/logic/mapTexture/jalan/cpp/: build.sh
daftar-menu/: 1.RATING PRESIDEN.txt  2.EKONOMI & SUMBER DAYA NASIONAL.txt  3.PEMBANGUNAN INFRASTRUKTUR & PRODUKSI.txt  4.KOMANDO PERTAHANAN & GEOPOLITIK.txt  5.GEOPOLITIK.txt  6.DAFTAR NEGARA.txt  7.DAFTAR NEGARA.txt  database_negara.txt
daftar-teknologi/: rekomendasi_teknologi.txt  struktur_folder.txt
map-engine-assets/: MapRenderer.tsx
presiden-simulator/: .gitignore  package-lock.json  package.json
(+17846 files in other folders)
